add more functionalities like add questions

--- a/web/pages/finish.html
+++ b/web/pages/finish.html
@@ -26,8 +26,8 @@
             <div class="card-body">
                 <p class="fs-3 fw-bold m-0" id="result"></p>
                 <p class="fs-3 fw-bold m-0" id="totalPoints"></p>
-                <a href="home.php" class="btn btn-primary">Home</a>
-                <a href="juego.php" class="btn btn-primary">Retry</a>
+                <a href="home.html" class="btn btn-primary">Home</a>
+                <a href="juego.html" class="btn btn-primary">Retry</a>
             </div>
         </div>
     </div>
