--- a/web/pages/home.html
+++ b/web/pages/home.html
@@ -63,7 +63,7 @@
         <div class="position-absolute bottom-0 end-0 p-4">
             <div class="card">
                 <div class="card-body">
-                    <a class="btn btn-primary" href="ranking.php">Ir a ranking</a>
+                    <a class="btn btn-primary" href="ranking.html">Ir a ranking</a>
                 </div>
             </div>
         </div>
@@ -79,7 +79,7 @@
         </div>
 
         <div class="position-absolute top-0 start-0 p-4">
-            <a class="btn btn-secondary" href="questions.php">
+            <a class="btn btn-secondary" href="questions.html">
                 <span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
                         <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
@@ -91,7 +91,7 @@
     </div>
 
     <script src="../bootstrap/js/bootstrap.min.js"></script>
-    <script src="../js/home.js"></script>
+    <!-- <script src="../js/home.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
 </body>
 
