add form to add questions (CRUD)

--- a/web/pages/questions.html
+++ b/web/pages/questions.html
@@ -98,14 +98,35 @@
 
                             <div class="mb-2">
                                 <div class="row">
-                                    <div class="col-lg-6 col-12">
-                                        <label for="imatge" class="form-label">Imatge URL</label>
-                                        <input type="text" class="form-control" id="imatge" name="imgURL"
-                                            aria-describedby="imatgeHelp">
-                                        <div id="imatge" class="form-text">Una imatge para dar una pista de la correcta.
+                                    <div class="col-lg-7 col-12 d-flex align-items-end">
+                                        <div class="w-100">
+                                            <label for="imatge" class="form-label">Imatge URL</label>
+                                            <input type="text" class="form-control" id="imatge" name="imgURL"
+                                                aria-describedby="imatgeHelp">
+                                            <div id="imatge" class="form-text">Una imatge para dar una pista de la
+                                                correcta.
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-6 col-12" id="containerImg">
+                                    <div class="col-lg-5 col-12">
+                                        <div class="" style="border:1px solid; color:rgb(33 37 41 / 75%);height: 150px;width: 100%; overflow: hidden;" id="containerImg">
+                                            <div id="exImatge" class="form-text m-0 d-flex justify-content-center align-items-center h-100">Aqui se vera la imagen que pongas.
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mb-2">
+                                <div class="row">
+                                    <div class="col-lg-12 col-12">
+                                        <div>
+                                            <div class="card">
+                                                <div class="card-body">
+
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
