--- a/web/pages/finish.html
+++ b/web/pages/finish.html
@@ -1,37 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-    <style>
-         body {
-            background-color: #71CBF0;
-        }
-        
-        .center-screen {
-            height: 100vh; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-    </style>
-</head>
-<body>
-    <div class="center-screen">
-        <p class="fs-1 fw-bold text-white">Acabaste</p>
-        <div class="card">
-            <div class="card-body">
-                <p class="fs-3 fw-bold m-0" id="result"></p>
-                <p class="fs-3 fw-bold m-0" id="totalPoints"></p>
-                <a href="home.html" class="btn btn-primary">Home</a>
-                <a href="juego.html" class="btn btn-primary">Retry</a>
-            </div>
+<style>
+    body {
+        background-color: #71CBF0;
+    }
+
+    .center-screen {
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+</style>
+
+<div class="center-screen">
+    <p class="fs-1 fw-bold text-white">Acabaste</p>
+    <div class="card">
+        <div class="card-body">
+            <p class="fs-3 fw-bold m-0" id="result"></p>
+            <p class="fs-3 fw-bold m-0" id="totalPoints"></p>
+            <button class="btn btn-primary" id="btnHome">Home</button>
+            <button class="btn btn-primary" id="btnRetryGame">Retry</button>
         </div>
     </div>
-<script src="../bootstrap/js/bootstrap.min.js"></script>
-<script src="../js/finish.js"></script>
-</body>
-</html>
+</div>
