--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPA</title>
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 </head>
 <body>
    
     <div id="app"></div>
 
+    <script type="module" src="../js/index.js"></script>
+    <script src="../bootstrap/js/bootstrap.min.js" id="bootstrap"></script>
 </body>
 </html>
