--- a/web/pages/questions.html
+++ b/web/pages/questions.html
@@ -27,7 +27,7 @@
                         <input type="text" class="form-control" placeholder="Buscar..." aria-label="Buscar"
                             aria-describedby="basic-addon1">
                     </div>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <button type="button" class="btn btn-primary" id="btnOpenAddModalQuestion">
                         <span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-plus-lg" viewBox="0 0 16 16">
@@ -63,11 +63,12 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Añadir pregunta</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h1 class="modal-title fs-5" id="labelModal">Añadir pregunta</h1>
+                    <button type="button" class="btn-close" id="btnCloseModal"></button>
                 </div>
                 <div class="modal-body text-start">
                     <form>
+                        <input id="idQuestion" hidden/>
                         <div class="mb-2 d-flex justify-content-between">
                             <div class="w-50 me-2">
                                 <label for="pregunta" class="form-label">Pregunta</label>
@@ -119,37 +120,41 @@
                                     <label for="respostes" class="form-label">Respostes</label>
                                     <div id="containeRespostes" class="d-grid gap-2">
                                         <div class="d-flex align-items-center w-100">
-                                            <input class="form-check-input me-2 checkRespostaCorrecta" name="check-corecta" style="width: 2%;" type="radio" checked/>
+                                            <input class="form-check-input me-2 checkRespostaCorrecta"
+                                                name="check-corecta" style="width: 2%;" type="radio" checked />
                                             <div class="card" style="width: 98%;">
                                                 <div class="card-body p-2">
-                                                    <input name="resposta" type="text" class="resposta"/>
+                                                    <input name="resposta" type="text" class="resposta" />
                                                 </div>
                                             </div>
                                         </div>
 
                                         <div class="d-flex align-items-center w-100">
-                                            <input class="form-check-input me-2 checkRespostaCorrecta" name="check-corecta" style="width: 2%;" type="radio"/>
+                                            <input class="form-check-input me-2 checkRespostaCorrecta"
+                                                name="check-corecta" style="width: 2%;" type="radio" />
                                             <div class="card" style="width: 98%;">
                                                 <div class="card-body p-2">
-                                                    <input name="resposta" type="text" class="resposta"/>
+                                                    <input name="resposta" type="text" class="resposta" />
                                                 </div>
                                             </div>
                                         </div>
 
                                         <div class="d-flex align-items-center w-100">
-                                            <input class="form-check-input me-2 checkRespostaCorrecta" name="check-corecta" style="width: 2%;" type="radio"/>
+                                            <input class="form-check-input me-2 checkRespostaCorrecta"
+                                                name="check-corecta" style="width: 2%;" type="radio" />
                                             <div class="card" style="width: 98%;">
                                                 <div class="card-body p-2">
-                                                    <input name="resposta" type="text" class="resposta"/>
+                                                    <input name="resposta" type="text" class="resposta" />
                                                 </div>
                                             </div>
                                         </div>
 
                                         <div class="d-flex align-items-center w-100">
-                                            <input class="form-check-input me-2 checkRespostaCorrecta" name="check-corecta" style="width: 2%;" type="radio"/>
+                                            <input class="form-check-input me-2 checkRespostaCorrecta"
+                                                name="check-corecta" style="width: 2%;" type="radio" />
                                             <div class="card" style="width: 98%;">
                                                 <div class="card-body p-2">
-                                                    <input name="resposta" type="text" class="resposta"/>
+                                                    <input name="resposta" type="text" class="resposta" />
                                                 </div>
                                             </div>
                                         </div>
@@ -160,9 +165,8 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="button"
-                                class="btn btn-primary"
-                                id="btnAddQuestion">Añadir pregunta</button>
+                        <button type="button" class="btn btn-primary" id="btnAddQuestion">Añadir pregunta</button>
+                        <button type="button" class="btn btn-primary" id="btnUpdateQuestion">Actualizar pregunta</button>
                     </form>
                 </div>
                 <!-- <div class="modal-footer">
