crud questions fixed

--- a/web/pages/ranking.html
+++ b/web/pages/ranking.html
@@ -12,6 +12,9 @@
 </style>
 
 <div class="center-screen w-100 text-center">
+    <div class="text-start">
+        <button class="btn btn-primary mt-3" id="btnHome">Home</button>
+    </div>
     <p class="fs-1 fw-bold text-white">RANKING</p>
     <div id="container-ranking">
 
