--- a/web/pages/ranking.html
+++ b/web/pages/ranking.html
@@ -12,11 +12,15 @@
 </style>
 
 <div class="center-screen w-100 text-center">
-    <div class="text-start">
-        <button class="btn btn-primary mt-3" id="btnHome">Home</button>
-    </div>
-    <p class="fs-1 fw-bold text-white">RANKING</p>
-    <div id="container-ranking">
+    <div class="w-75">
+        <div class="text-start">
+            <button class="btn btn-primary mt-3" id="btnHome">Home</button>
+        </div>
+        <div class="text-start py-4">
+            <p class="fs-1 fw-bold text-white">Ranking</p>
+        </div>
+        <div id="container-ranking" class="w-100">
 
+        </div>
     </div>
 </div>
