--- a/web/pages/finish.html
+++ b/web/pages/finish.html
@@ -17,16 +17,30 @@
     <div class="card w-75">
         <div class="card-body">
             <!-- <img id="profilePicturePlayer"/> -->
-            <div class="d-flex justify-content-between">    
-                <div style="border:1px solid; border-radius: 100px; width: 4%;">
+            <div class="row">
+                <div class="col-lg-2 col-12">
+                    <div style="border-radius: 100px; width:80px; height: 80px; overflow: hidden;">
+                        <img id="profilePic" src="ruta/a/tu-imagen.jpg" alt="Profile Picture"
+                            style="width: 100%; height: 100%; object-fit: cover;">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-12">
+                    <p class="fs-3 fw-bold m-0" id="namePlayer"></p>
 
                 </div>
-                <p class="fs-3 fw-bold m-0" id="namePlayer"></p>
-                <p class="fs-3 fw-bold m-0" id="result"></p>
-                <p class="fs-3 fw-bold m-0" id="time"></p>
-                <p class="fs-3 fw-bold m-0" id="totalPoints"></p>
-            </div>
+                <div class="col-lg-2 col-12">
+                    <p class="fs-3 fw-bold m-0" id="result"></p>
 
+                </div>
+                <div class="col-lg-3 col-12">
+                    <p class="fs-3 fw-bold m-0" id="time"></p>
+
+                </div>
+                <div class="col-lg-2 col-12">
+                    <p class="fs-3 fw-bold m-0" id="totalPoints"></p>
+
+                </div>
+            </div>
         </div>
     </div>
     <div class="d-flex w-75 mt-lg-4">
