--- a/web/pages/home.html
+++ b/web/pages/home.html
@@ -40,11 +40,8 @@
         <div class="col-lg-12 col-12">
             <div class="d-flex justify-content-center align-items-center">
                 <div class="w-50 w-lg-25">
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" id="name" aria-label="Sizing example input"
-                            aria-describedby="inputGroup-sizing-default">
-                    </div>
-                    <button class="btn btn-primary btn-lg fs-2 fw-bold btn-shadow w-100" id="btnPlay">JUGAR</a>
+                    <button class="btn btn-primary btn-lg fs-2 fw-bold btn-shadow w-100" id="btnPlay">JUGAR</button>
+                    <button class="btn btn-primary btn-sm fs-2 fw-bold btn-shadow w-100" id="btnLogOut">LOGOUT</button>
                 </div>
             </div>
         </div>
