--- a/web/pages/register.html
+++ b/web/pages/register.html
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-12 mb-3">
+                    <div class="col-lg-12">
                         <label class="text-primary fs-6">Confirma contraseña</label>
                         <div class="input-group">
                             <button class="input-group-text" id="btnSeePassword2">
@@ -72,7 +72,12 @@
                         <div id="validatorPasswordConfirm"></div>
                     </div>
                 </div>
-
+                <div class="row mb-3">
+                    <div class="col-lg-12">
+                        <button class="text-primary btn m-0 p-0 mt-lg-1 fs-7"
+                                id="btnRedirigirLogin">Tienes cuenta? Logeate</button>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-lg-12 col-12">
                         <button class="btn btn-primary w-100 btn-lg" id="btnRegister">
@@ -85,17 +90,14 @@
         </div>
     </div>
 
-    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div class="toast-container position-fixed top-0 end-0 p-3">
         <div id="liveToastError" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-          <div class="toast-header">
-            <img src="..." class="rounded me-2" alt="...">
-            <strong class="me-auto">Bootstrap</strong>
-            <small>11 mins ago</small>
-            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-          </div>
-          <div class="toast-body">
-            Hello, world! This is a toast message.
-          </div>
+            <div class="toast-body bg-danger bg-opacity-75 text-white rounded-2">
+                <div class="d-flex justify-content-center align-items-center">
+                    <i class="bi bi-exclamation-triangle-fill fs-5 me-2"></i>
+                    <p class="m-0" id="toastMsg"></p>
+                </div>
+            </div>
         </div>
-      </div>
+    </div>
 </div>
