--- a/web/pages/home.html
+++ b/web/pages/home.html
@@ -53,7 +53,12 @@
             </div>
         </div>
     </div>
-    <div class="position-absolute top-0 end-0 p-4">
+    <button class=" btn position-absolute top-0 end-0 p-4" id="btnToProfile">
+        <div class="d-flex align-items-center justify-content-center" id="userData">
+
+        </div>
+    </button>
+    <div class="position-absolute bottom-0 start-0 p-4">
         <button class="btn btn-secondary">
             <span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -66,7 +71,7 @@
         </button>
     </div>
 
-    <div class="position-absolute top-0 start-0 p-4">
+    <div class="position-absolute top-0 start-0 p-4" id="containerAdminQuestions">
         <button class="btn btn-secondary" id="btnAdminQuestions">
             <span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
