in process profile screen

--- a/web/pages/profile.html
+++ b/web/pages/profile.html
@@ -1,6 +1,5 @@
 <style>
     .center-screen {
-        height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -14,10 +13,17 @@
 </style>
 <div class="center-screen w-100 text-center" id="content">
     <div class="w-75">
-        
-        <h3>Pagina en construcción</h3>
-        <div class="">
+        <div class="text-start w-100 mb-lg-3">
             <button class="btn btn-primary mt-3" id="btnHome">Home</button>
+        </div>
+        <div class="card">
+            <div class="card-body text-start">
+                <p class="fs-1 fw-bold">Perfil</p>
+                <div class="row">
+                    <div class="col-lg-3"></div>
+                </div>
+                <button class="btn btn-danger btn-sm fw-bold btn-shadow" id="btnLogOut">LOGOUT</button>
+            </div>
         </div>
     </div>
 </div>
