--- a/web/pages/home.html
+++ b/web/pages/home.html
@@ -39,9 +39,12 @@
     <div class="row w-100 mt-3">
         <div class="col-lg-12 col-12">
             <div class="d-flex justify-content-center align-items-center">
-                <div class="w-50 w-lg-25">
+                <div class="w-50 w-lg-25" id="containerBtnPlay">
                     <button class="btn btn-primary btn-lg fs-2 fw-bold btn-shadow w-100" id="btnPlay">JUGAR</button>
-                    <button class="btn btn-primary btn-sm fs-2 fw-bold btn-shadow w-100" id="btnLogOut">LOGOUT</button>
+                </div>
+                <div class="w-50 w-lg-25" id="containerBtnLogin">
+                    <button class="btn btn-primary btn-lg fs-2 fw-bold btn-shadow w-100"
+                        id="btnLogin">LOGIN/REGISTER</button>
                 </div>
             </div>
         </div>
