--- a/web/pages/home.html
+++ b/web/pages/home.html
@@ -62,7 +62,7 @@
         </div>
     </button>
     <div class="position-absolute bottom-0 start-0 p-4">
-        <button class="btn btn-secondary">
+        <button class="btn btn-secondary" id="btnConfig">
             <span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-gear-fill" viewBox="0 0 16 16">
@@ -85,5 +85,41 @@
             </span>
             <span class="ms-2">Administrar questions</span>
         </button>
+    </div>
+
+    <div class="modal fade" id="modalConfig" tabindex="-1" aria-labelledby="configModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <!-- <div class="modal-header">
+                    <button type="button" class="btn-close" id="btnCloseModal"></button>
+                </div> -->
+                <div class="modal-body text-start">
+                    <div class="mb-lg-4 mb-2" style="border-bottom:1px solid #0d6efd">
+                        <label class="text-primary fs-3">Configuración de la partida</label>
+                    </div>
+                    <div class="row mb-lg-4 mb-2">
+                        <div class="col-lg-6 col-12">
+                            <label class="text-primary fs-6">Numero de preguntas:</label>
+                            <select class="form-select" aria-label="Default select example" id="numQuestions">
+                                <option value="10">10</option>
+                                <option value="20">20</option>
+                                <option value="30">30</option>
+                            </select>
+                        </div>
+                        <div class="col-lg-6 col-12">
+                            <label class="text-primary fs-6">Dificultat de las preguntas:</label>
+                            <select class="form-select" aria-label="Default select example" id="difficult">
+                                <option value="easy">Facil</option>
+                                <option value="medium">Medio</option>
+                                <option value="high">Dificil</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="w-100">
+                        <button class="btn btn-primary w-100" id="btnSaveConfig">Guardar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
